# zpg

./: AIpoznamky.md  App.cpp  App.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Controller.cpp  Controller.hpp  DrawableObject.cpp  DrawableObject.hpp  Model.cpp  Model.hpp  Observer.hpp  README.md  Scene.cpp  Scene.hpp  Subject.hpp  Transformation.cpp  Transformation.hpp  callBacks.hpp  main copy.cpp  main.cpp
IAnimator/: IAnimator.hpp
Transformation/: ITransformation.cpp  ITransformation.hpp
shaderProgram/: Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp
shaders/: Blinn.frag  Constant.frag  Lambert.frag  Phong.frag  frag.frag  vert.vert
